test_suite/tests/ui/remote/enum_getter.stderr
error: #[serde(getter = "...")] is not allowed in an enum
  --> $DIR/enum_getter.rs:10:10
   |
10 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

